fix: overflowing of x axis

--- a/css/style.css
+++ b/css/style.css
@@ -417,7 +417,7 @@ hr {
   }
 
   .h1{
-    margin: -12px;
+    margin: 0px;
   }
   .nav-sub-title {
     font-size: 2rem;
